@@ -8,6 +8,7 @@
 	* Add feature #35931: Allow to show terms of usage on page or url
 	* Add feature #15100 (old bug tracker): How to include terms of use in registration form
 	* Add feature #18009 (old bug tracker): Add module_sys_dmail_newsletter to tx_srfeuserregister_pi1_css_tmpl.html (Thanks to Tobias Schaefer)
+	* Fix bug #11529 (old bug tracker): tx_srfeuserregister_control_main::init has wrong PhpDoc comment
 
 2012-04-11 Stanislas Rolland  <typo3@sjbr.ca>
 	* Follow-up 4 to feature #35805: Display message in frontend if required extension is not loaded
